python-project-starter/react-app/src/components/itemsList.css
.item-detail-container {
    display: flex;
    flex-wrap: wrap;
    margin: 0px 20px;
    justify-content: center;
    align-items: center;
    max-width: 100vw;
}

.inner-item-detail-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    max-width: 1050px;
    min-height: 550px;
}

.inner-item-detail-container .img-container {
    margin-top: 50px;
    width: 400px;
    height: 450px;
    margin-bottom: 50px;
    align-self: center;
}

.inner-item-detail-container .img-container img {
    width: 400px;
    height: 450px;
    object-fit: contain;
}


.details-container {
    max-width: 550px;
    padding: 20px;
    min-width: 500px;
    min-height: 420px;
}

.details-container h3 {
    margin-bottom: 8px;
}

.details-container h6 {
    font-size: 1.2rem;
}


.score-average {
    margin-bottom: 15px;
    line-height: 0px;
}

.star-rating-div {
    display: flex;
    align-items: center;;
}

.start-rating-div .star-ratings {

}

.details-container .star-ratings {
    font-size: 3rem;
}

.seller-first-last {
    margin: 0px;
}

.seller-first-last h6 {
    margin: 0;
}

.number-format {
    font-size: 1.8rem;
    margin-left: 10px;
    margin-bottom: 20px;
}

.cart-button-container {
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
}


.cart-button-container button {
    margin: 10px 10px;
    min-width: 100px;
    max-width: 400px;
    border-radius: 20px;
    min-height: 45px;;
    max-height: auto;
    width: 100%;
    background-color: black;
    color: white;
    font-size: 15px;
    font-weight: bold;
    transition: background 150ms ease-in-out,
}


.cart-button-container button:hover {
    background-color: rgb(58, 55, 55);
    cursor: pointer;
}

.reviews-container {
    display: flex;
    flex-direction: column;
    max-width: 800px;
    min-width: 300px;
    margin: 15px 0px;
}

.total-reviews {
    border-bottom: 1px solid gray;
    margin-bottom: 20px;
}

.reviews {
    min-width: 300px;
    max-width: 800px;
    margin-bottom: 25px;
}

.reviews .user-and-date {
margin-bottom: 20px;
font-weight: bold;
font-size: 12px;
}

.reviews .review-description {
    margin-bottom: 50px;
}

.bottom-container {
    display: flex;
    flex-direction: column;
    justify-self: flex-start;
    max-width: 1050px;
    min-width: 300px;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.bottom-container .more-by-seller {
    margin-bottom: 80px;
}

.more-by-seller .item-container {
    margin-right: 5px;
    display: flex;
    flex-wrap: wrap;
    max-width: 300px;
    margin: 10px 20px
}

.more-by-seller .item-container .image-container img {
    width: 300px;
    height: 300px;
    object-fit: cover;
    border-radius: 3px;
    transition: box-shadow 250ms ease-in-out,
    transform 150ms ease;
    border: .1px solid rgba(134, 126, 126, 0.226);
}

.more-by-seller .item-container .image-container img:hover {
    cursor: pointer;
}

.seller {
    display: flex;
    flex-direction: column;
}

.seller h3 {
    font-size: 1.6rem;
}

.all-items {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.review textarea {
    min-width: 100%
}

form {
    display: flex;
    flex-direction: column;
    margin-top: 30px;
}

form > button {
    margin: 10px 10px;
    min-width: 100px;
    max-width: 400px;
    border-radius: 20px;
    min-height: 45px;;
    max-height: auto;
    width: 100%;
    background-color: black;
    color: white;
    font-size: 15px;
    font-weight: bold;
    transition: background 150ms ease-in-out;
    align-self: center
}


form button:hover {
    background-color: rgb(58, 55, 55);
    cursor: pointer;
}

